{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 390,
  "lineage": "5ad2d871-3fef-8735-aa4a-34cc55e73641",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "security_group",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c405f45d-d750-45a5-8d4d-5c9006d4b2b5/resourceGroups/datatransformation-main-network/providers/Microsoft.Network/networkSecurityGroups/acctsecgrp",
            "location": "westeurope",
            "name": "acctsecgrp",
            "resource_group_name": "datatransformation-main-network",
            "security_rule": [],
            "tags": {
              "tag1": "",
              "tag2": ""
            }
          },
          "dependencies": [
            "azurerm_resource_group.rgmain",
            "module.network.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "security_rule_rdp",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/c405f45d-d750-45a5-8d4d-5c9006d4b2b5/resourceGroups/datatransformation-main-network/providers/Microsoft.Network/networkSecurityGroups/acctsecgrp/securityRules/rdp",
            "name": "rdp",
            "network_security_group_name": "acctsecgrp",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "datatransformation-main-network",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "dependencies": [
            "azurerm_resource_group.rgmain",
            "module.network.azurerm_network_security_group.security_group",
            "module.network.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "security_rule_ssh",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/c405f45d-d750-45a5-8d4d-5c9006d4b2b5/resourceGroups/datatransformation-main-network/providers/Microsoft.Network/networkSecurityGroups/acctsecgrp/securityRules/ssh",
            "name": "ssh",
            "network_security_group_name": "acctsecgrp",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "datatransformation-main-network",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "dependencies": [
            "azurerm_resource_group.rgmain",
            "module.network.azurerm_network_security_group.security_group",
            "module.network.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_link_endpoint",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.3.0/24",
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c405f45d-d750-45a5-8d4d-5c9006d4b2b5/resourceGroups/datatransformation-main-network/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/endpointsubnet",
            "name": "endpointsubnet",
            "network_security_group_id": "/subscriptions/c405f45d-d750-45a5-8d4d-5c9006d4b2b5/resourceGroups/datatransformation-main-network/providers/Microsoft.Network/networkSecurityGroups/acctsecgrp",
            "resource_group_name": "datatransformation-main-network",
            "virtual_network_name": "acctvnet"
          },
          "dependencies": [
            "azurerm_resource_group.rgmain",
            "module.network.azurerm_network_security_group.security_group",
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_link_endpoint_storage",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.4.0/24",
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c405f45d-d750-45a5-8d4d-5c9006d4b2b5/resourceGroups/datatransformation-main-network/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/storageaccountsubnet",
            "name": "storageaccountsubnet",
            "network_security_group_id": "/subscriptions/c405f45d-d750-45a5-8d4d-5c9006d4b2b5/resourceGroups/datatransformation-main-network/providers/Microsoft.Network/networkSecurityGroups/acctsecgrp",
            "resource_group_name": "datatransformation-main-network",
            "virtual_network_name": "acctvnet"
          },
          "dependencies": [
            "azurerm_resource_group.rgmain",
            "module.network.azurerm_network_security_group.security_group",
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c405f45d-d750-45a5-8d4d-5c9006d4b2b5/resourceGroups/datatransformation-main-network/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1",
            "name": "subnet1",
            "network_security_group_id": "/subscriptions/c405f45d-d750-45a5-8d4d-5c9006d4b2b5/resourceGroups/datatransformation-main-network/providers/Microsoft.Network/networkSecurityGroups/acctsecgrp",
            "resource_group_name": "datatransformation-main-network",
            "virtual_network_name": "acctvnet"
          },
          "dependencies": [
            "azurerm_resource_group.rgmain",
            "module.network.azurerm_network_security_group.security_group",
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c405f45d-d750-45a5-8d4d-5c9006d4b2b5/resourceGroups/datatransformation-main-network/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet2",
            "name": "subnet2",
            "network_security_group_id": "/subscriptions/c405f45d-d750-45a5-8d4d-5c9006d4b2b5/resourceGroups/datatransformation-main-network/providers/Microsoft.Network/networkSecurityGroups/acctsecgrp",
            "resource_group_name": "datatransformation-main-network",
            "virtual_network_name": "acctvnet"
          },
          "dependencies": [
            "azurerm_resource_group.rgmain",
            "module.network.azurerm_network_security_group.security_group",
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/c405f45d-d750-45a5-8d4d-5c9006d4b2b5/resourceGroups/datatransformation-main-network/providers/Microsoft.Network/virtualNetworks/acctvnet",
            "location": "westeurope",
            "name": "acctvnet",
            "resource_group_name": "datatransformation-main-network",
            "tags": {
            }
          },
          "dependencies": [
            "azurerm_resource_group.rgmain",
            "module.network.azurerm_resource_group.network"
          ]
        }
      ]
    }
  ]
}